@@ -1,6 +1,8 @@
 package com.dperez.CarRegistry.controller;
 
 import com.dperez.CarRegistry.controller.dtos.CarDTO;
+import com.dperez.CarRegistry.controller.dtos.CarDTOAndBrand;
+import com.dperez.CarRegistry.controller.mapper.CarDTOAndBrandMapper;
 import com.dperez.CarRegistry.controller.mapper.CarDTOMapper;
 import com.dperez.CarRegistry.service.CarService;
 import com.dperez.CarRegistry.service.model.Car;
@@ -11,10 +13,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
+@RequestMapping("/cars")
 public class CarController {
 
     @Autowired
@@ -28,9 +32,9 @@ public class CarController {
             // Cuando se guarda se devuelve en newCarDTO  y se muestra la respuesta
             Car car = CarDTOMapper.INSTANCE.carDTOToCar(carDTO);
             Car newCar = carService.addCar(car);
-            CarDTO newCarDTO = CarDTOMapper.INSTANCE.carToCarDTO(newCar);
+            CarDTOAndBrand newCarDTOAndBrand = CarDTOAndBrandMapper.INSTANCE.carToCarDTOAndBrand(newCar);
             log.info("New Car added");
-            return ResponseEntity.ok(newCarDTO);
+            return ResponseEntity.ok(newCarDTOAndBrand);
 
         } catch (IllegalArgumentException e) {
             // Error por Id ya existente.
@@ -43,16 +47,26 @@ public class CarController {
         }
     }
 
+//    @PostMapping("add-cars")
+//    public CompletableFuture<List<CarDTO>> addCars(@RequestBody List<CarDTO> carDTOs){
+//
+//        // Convierte la lista de CarDTO a Car y llama al método addCars del servicio
+//        List<Car> cars = carDTOs.stream().map(CarDTOMapper.INSTANCE::carDTOToCar).collect(Collectors.toList());
+//        return carService.addCars(cars).thenApply(addedCars -> {
+//            List<CarDTO> addedCarDTOs =
+//        })
+//    }
+
     @GetMapping("get-car/{id}")
     public ResponseEntity<?> getCarById(@PathVariable Integer id){
 
-        // Se busca la id solicitada. Si existe se devuelve la información del coche.
+        // Se busca la id solicitada. Si existe se devuelve la información del coche y la marca.
         // Si no devuelve mensaje de error.
         Car car = carService.getCarById(id);
         if (car != null){
             log.info("Car info loaded");
-            CarDTO carDTO = CarDTOMapper.INSTANCE.carToCarDTO(car);
-            return ResponseEntity.ok(carDTO);
+            CarDTOAndBrand carDTOAndBrand = CarDTOAndBrandMapper.INSTANCE.carToCarDTOAndBrand(car);
+            return ResponseEntity.ok(carDTOAndBrand);
         }
         else {
             log.error("Id does not exist");
@@ -69,7 +83,7 @@ public class CarController {
             Car carToUpdate = carService.updateCarById(id, car);
 
             // Mapear Car a CarDTO y devolver CarDTO actualizado
-            CarDTO carUpdated = CarDTOMapper.INSTANCE.carToCarDTO(carToUpdate);
+            CarDTOAndBrand carUpdated = CarDTOAndBrandMapper.INSTANCE.carToCarDTOAndBrand(carToUpdate);
             log.info("Car updated");
             return ResponseEntity.ok(carUpdated);
 
@@ -101,12 +115,12 @@ public class CarController {
     }
 
     @GetMapping("get-all")
-    public ResponseEntity<List<CarDTO>> getAllCars(){
+    public ResponseEntity<List<CarDTOAndBrand>> getAllCars(){
 
         // Mapea la lista con objetos Car a una lista con objetos carDTO y muestra su resultado.
         List<Car> cars = carService.getAllCars();
-        List<CarDTO> carDTOS = cars.stream().map(CarDTOMapper.INSTANCE::carToCarDTO).collect(Collectors.toList());
+        List<CarDTOAndBrand> carDTOsAndBrand = cars.stream().map(CarDTOAndBrandMapper.INSTANCE::carToCarDTOAndBrand).toList();
         log.info("Rcovering all cars");
-        return ResponseEntity.status(HttpStatus.OK).body(carDTOS);
+        return ResponseEntity.status(HttpStatus.OK).body(carDTOsAndBrand);
     }
 }
